<resources>
    <string name="app_name">Arkanoid</string>
    <string name="continue_game_button">Continue</string>
    <string name="new_game_button">New game</string>
    <string name="about_game_button">About</string>
    <string name="quit_game_button">Quit game</string>
    <string name="author_text">by Maxim Alov</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="warning_title">New game</string>
    <string name="warning_message">You will lose stored game state, are you sure want to start new game ?</string>
    <string name="action_throw">Throw</string>
    <string name="action_nextLevel">Next level</string>
    <string name="action_dropStat">Drop stat</string>
    <string name="about_title">About application</string>
    <string name="about_message">Author: Maxim Alov alovmax@yandex.ru</string>
    <string name="internal_error">Internal error !</string>
    <string name="internal_error_message">It is recommended to restart application.</string>
    <string name="close_button">Close</string>
    <string name="attribution_sounds" translatable="false">Sounds</string>
    <string name="attribution_icons" translatable="false">Icons</string>
    <string name="attribution_images" translatable="false">Graphics</string>
    <string name="attribution_sounds_desc" translatable="false">This application uses sounds from freesound.org.\nLicense notes are available here:\nhttps://www.freesound.org\nSounds were renamed for more convenient implementation of this application.Here is the list of attribution for all sounds:
        \n\n<b>boom_1.wav</b>    :: bad explosion by nthompson &#8212; https://www.freesound.org/people/nthompson/sounds/47252/ &#8212; License: Creative Commons 0
        \n\n<b>boom_2.wav</b>    :: carbidexplosion.wav by escortmarius &#8212; https://www.freesound.org/people/escortmarius/sounds/172870/ &#8212; License: Attribution
        \n\n<b>change_1.wav</b>  :: Spacey 1up/Power up by GameAudio &#8212; https://www.freesound.org/people/GameAudio/sounds/220173/ &#8212; License: Creative Commons 0
        \n\n<b>destroy_1.wav</b> :: sudden appearance by supersnd &#8212; https://www.freesound.org/people/supersnd/sounds/207802/ &#8212; License: Creative Commons 0
        \n\n<b>destroy_2.wav</b> :: teleport by fins &#8212; https://www.freesound.org/people/fins/sounds/172206/ &#8212; License: Creative Commons 0
        \n\n<b>explode_1.wav</b> :: Firework Explosion by TB0Y298 &#8212; https://www.freesound.org/people/TB0Y298/sounds/254071/ &#8212; License: Attribution
        \n\n<b>fog_1.wav</b>     :: air.wav by Sergenious &#8212; https://www.freesound.org/people/Sergenious/sounds/55815/ &#8212; License: Attribution
        \n\n<b>hyper_1.wav</b>   :: teleport by fins &#8212; https://www.freesound.org/people/fins/sounds/172207/ &#8212; License: Creative Commons 0
        \n\n<b>init_1.wav</b>    :: tape_slow8.wav by zerolagtime &#8212; https://www.freesound.org/people/zerolagtime/sounds/49245/ &#8212; License: Attribution
        \n\n<b>invul_1.wav</b>   :: metal 9.wav by D DJ Chronos &#8212; https://www.freesound.org/people/D DJ Chronos/sounds/123587/ &#8212; License: Attribution
        \n\n<b>invul_2.wav</b>   :: metal_clang_02.wav by Department64 &#8212; https://www.freesound.org/people/Department64/sounds/95270/ &#8212; License: Creative Commons 0
        \n\n<b>invul_3.wav</b>   :: tonk3.WAV by eliasheuninck &#8212; https://www.freesound.org/people/eliasheuninck/sounds/3543/ &#8212; License: Creative Commons 0
        \n\n<b>iron_1.wav</b>    :: concrete block 3.wav by FreqMan &#8212; https://www.freesound.org/people/FreqMan/sounds/25843/ &#8212; License: Attribution
        \n\n<b>iron_2.wav</b>    :: concrete block 1.wav by FreqMan &#8212; https://www.freesound.org/people/FreqMan/sounds/25841/ &#8212; License: Attribution
        \n\n<b>laser_1.wav</b>   :: Laser8.wav by jobro &#8212; https://www.freesound.org/people/jobro/sounds/35685/ &#8212; License: Attribution
        \n\n<b>laser_2.wav</b>   :: ClassicLaser.WAV by Snipperbes &#8212; https://www.freesound.org/people/Snipperbes/sounds/73537/ &#8212; License: Creative Commons 0
        \n\n<b>lose_1.wav</b>    :: Comedic Whistle, A.wav by InspectorJ &#8212; https://www.freesound.org/people/InspectorJ/sounds/345688/ &#8212; License: Attribution
        \n\n<b>midas_1.wav</b>   :: 06564 fairy magic wand.wav by Robinhood76 &#8212; https://www.freesound.org/people/Robinhood76/sounds/342432/ &#8212; License: Attribution Noncommercial *(I have asked and then received a permission from the original Author \'Robinhood76 at https://www.facebook.com/fxprosound/\' to use in my Android apps)*
        \n\n<b>prequick_1.wav</b>:: iceSpell.wav by Relenzo2 &#8212; https://www.freesound.org/people/Relenzo2/sounds/160420/ &#8212; License: Creative Commons 0
        \n\n<b>protect_1.wav</b> :: FX_26_Laser.wav by AlienXXX &#8212; https://www.freesound.org/people/AlienXXX/sounds/211588/ &#8212; License: Attribution
        \n\n<b>quick_1.wav</b>   :: Glass Break - Medium Jar by RoganDerrick &#8212; https://www.freesound.org/people/RoganDerrick/sounds/260434/ &#8212; License: Attribution
        \n\n<b>short_1.wav</b>   :: Zip.wav by jackjames_tomknevitt &#8212; https://www.freesound.org/people/jackjames_tomknevitt/sounds/209489/ &#8212; License: Attribution
        \n\n<b>skull_1.wav</b>   :: dead_bird.wav by markb258 &#8212; https://www.freesound.org/people/markb258/sounds/245807/ &#8212; License: Attribution
        \n\n<b>vital_1.wav</b>   :: Action 02 by rhodesmas &#8212; https://www.freesound.org/people/rhodesmas/sounds/320776/ &#8212; License: Attribution
        \n\n<b>vital_2.wav</b>   :: SFX Magic by renatalmar &#8212; https://www.freesound.org/people/renatalmar/sounds/264981/ &#8212; License: Creative Commons 0
        \n\n<b>win_1.wav</b>     :: Good! by syseQ &#8212; https://www.freesound.org/people/syseQ/sounds/267528/ &#8212; License: Creative Commons 0
        \n
        \n
        This application also uses sounds from diforb.com\nLicense notes are available here:\nhttp://diforb.com\nList of sounds:\n
        \nbite_1.wav, bite_2.wav, \nblock_1.wav, block_2.wav, \nblock_3.wav, block_4.wav,
        \nglass_1.wav, magic_1.wav, \nmagic_2.wav, prize_1.wav, \nprize_2.wav, prize_3.wav,
        \nultra_1.wav, ultra_2.wav, \nultra_3.wav, ultra_4.wav, \nwater_1.wav, water_2.wav,
        \nwater_3.wav, zygote_1.wav, \nzygote_2.wav, zygote_3.wav,\nbutton_click.wav</string>
</resources>