<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	 
    <TextView
        android:id="@+id/dialog1_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_title_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_title_textsize"
        android:textStyle="bold"
        android:text="@string/about_title" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <TextView
	        android:id="@+id/dialog1_message_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="@dimen/dialog_message_margin"
	        android:lines="5"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/dialog_message_textsize"
	        android:textStyle="normal"
	        android:text="@string/about_message" />
	</ScrollView>
	
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey" >
        
        <Button
            android:id="@+id/dialog_one_button_button"
            android:layout_width="@dimen/dialog1_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_margin="@dimen/dialog_buttom_margin"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_button_label_size"
            android:textStyle="normal"
            android:text="@string/close_button" />
    </FrameLayout>
	
</LinearLayout>
