<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	 
    <TextView
        android:id="@+id/dialog2_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_title_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_title_textsize"
        android:textStyle="bold"
        android:text="@string/warning_title" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <TextView
	        android:id="@+id/dialog2_message_textview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="@dimen/dialog_message_margin"
	        android:lines="2"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/dialog_message_textsize"
	        android:textStyle="normal"
	        android:text="@string/warning_message" />
	</ScrollView>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/grey" >
	    
	    <FrameLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@android:color/transparent" >
	        
	        <Button
	            android:id="@+id/dialog_two_buttons_first_button"
	            android:layout_width="@dimen/dialog2_button_width"
	            android:layout_height="@dimen/dialog_button_height"
	            android:layout_margin="@dimen/dialog_buttom_margin"
	            android:layout_gravity="center"
	            android:background="@drawable/button_selector"
	            android:textColor="@android:color/black"
	            android:textSize="@dimen/dialog_button_label_size"
	            android:textStyle="normal"
	            android:text="@string/ok_button" />
	    </FrameLayout>
	    
	    <FrameLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@android:color/transparent" >
	        
	        <Button
	            android:id="@+id/dialog_two_buttons_second_button"
	            android:layout_width="@dimen/dialog2_button_width"
	            android:layout_height="@dimen/dialog_button_height"
	            android:layout_margin="@dimen/dialog_buttom_margin"
	            android:layout_gravity="center"
	            android:background="@drawable/button_selector"
	            android:textColor="@android:color/black"
	            android:textSize="@dimen/dialog_button_label_size"
	            android:textStyle="normal"
	            android:text="@string/cancel_button" />
	    </FrameLayout>
    </LinearLayout>
	
</LinearLayout>
